[package]
name = "hephaestus"
version = "0.2.0-0"
authors = ["Daniele Esposti"]
edition = "2021"

[lib]
name = "hephaestus"
crate-type = ["cdylib"]

[dependencies]
pest = "~2.1.3"
pest_derive = "~2.1.0"
dict_derive = "~0.2.0"
lazy_static = "~1.4.0"

[dependencies.pyo3]
version = "~0.11.1"
# git = "https://github.com/expobrain/pyo3.git"
# branch = "python3_bin"
# features = []
features = ["extension-module"]
